Fixed modal not showing anything bug

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,28 +1,5 @@
-// Styling for the "What should I do" button
-.big-button {
-  background: $action-button-bg-color;
-  border: none;
-  // Darken the bottom border by 10%
-  // border-bottom: .6rem solid darken($sunny, 10%);
-  border-radius: 5px;
-  color: $action-button-color;
-  font-weight: bold;
-  font-size: $l-size;
-  margin-bottom: $xl-size;
-  padding: 2.4rem;
-  width: 100%;
-}
-
-.big-button:disabled {
-  opacity: .5;
-}
-
-.big-button:hover {
-  background: darken($action-button-bg-color, 10%);
-}
-
 // Styling for "Add Option" button
-.add-option-button {
+.button {
   background: $action-button-bg-color;
   border: none;
   // border-bottom: .3rem solid darken($sunny, 10%);
@@ -33,7 +10,30 @@
   padding: $s-size;
 }
 
-.add-option-button:hover {
+.button:hover {
+  background: darken($action-button-bg-color, 10%);
+}
+
+// Styling for the "What should I do" button
+.big-button {
+  background: $action-button-bg-color;
+  border: none;
+  // Darken the bottom border by 10%
+  // border-bottom: .6rem solid darken($sunny, 10%);
+  border-radius: 5px;
+  color: $action-button-color;
+  font-weight: bold;
+  font-size: $l-size;
+  margin-bottom: $l-size;
+  padding: 2.4rem;
+  width: 100%;
+}
+
+.big-button:disabled {
+  opacity: .5;
+}
+
+.big-button:hover {
   background: darken($action-button-bg-color, 10%);
 }
 
@@ -75,13 +75,9 @@
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.5);
 }
 
-// .button--login {
-//   margin: 0 $m-size;
-// }
-
-// .button--logout {
-//   margin: 0 $m-size;
-// }
+.modal-button {
+  padding: $s-size $m-size;
+}
 
 @media(max-width: $desktop-breakpoint) {
   .big-button {
